<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_actividad_registro"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.proyecto1.william.proyecto1.RegistroActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registro_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtEmail_Registro"
            android:hint="@string/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textCapWords"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/registro_email"
        android:id="@+id/registro_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txtPassword_Registro"
            android:hint="@string/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@+id/registro_contraseña"
        android:text="@string/registro_Registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegistro_Registro"
        style="@style/StyleBotones"/>

    <TextView
        android:layout_below="@+id/btnRegistro_Registro"
        android:id="@+id/btnRecuperar_registro"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/login_olvidoPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/registro_layout_o"
        android:layout_below="@+id/btnRecuperar_registro"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c4c8c9"
            android:layout_margin="5dp"/>
        <TextView
            android:padding="5dp"
            android:text="O"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c4c8c9"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btnInicio_registro"
        android:layout_below="@+id/registro_layout_o"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/registro_Inicio"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--Button
        android:text="@string/login_Registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegistro_login"/-->

</RelativeLayout>
